@@ -20,7 +20,7 @@ CCC=g++
 LD=g++
 CFLAGS=-c -I../pccts/h $(CFLAGS_DEBUG) -x c++ 
 C_OFLAG=-o
-LDFLAGS=$(LDFLAGS_DEBUG) 
+LDFLAGS=$(LDFLAGS_DEBUG) -static
 LD_OFLAG=-o
 OBJEXT=o
 CCCC_EXE=cccc
